# RustHackableGame

./: README.md  networking.rs  serialization.rs  structures.rs
Client/: Cargo.toml
Client/src/: main.rs  networking.rs  structures.rs
Flat_Modules/: AnswerGameData_generated.rs  AnswerOnlinePlayers_generated.rs  AnswerPlayer_generated.rs  AskForGameData_generated.rs  AskForOnlinePlayers_generated.rs  AskForPlayer_generated.rs  GameData_generated.rs  GameResult_generated.rs  GenericPacket_generated.rs  Message_generated.rs  OnlinePlayers_generated.rs  Player_generated.rs  ReceivePlayer_generated.rs  RecivePlayer_generated.rs  SendGameScore_generated.rs  SendPlayerGameScore_generated.rs
Flat_Specs/: AnswerGameData.fbs  AnswerOnlinePlayers.fbs  AnswerPlayer.fbs  AskForGameData.fbs  AskForOnlinePlayers.fbs  AskForPlayer.fbs  GameData.fbs  GameResult.fbs  GenericPacket.fbs  Message.fbs  OnlinePlayers.fbs  Player.fbs  ReceivePlayer.fbs  RecivePlayer.fbs  SendGameScore.fbs  SendPlayerGameScore.fbs  Status.fbs
Server/: Cargo.toml  run.sh
Server/src/: main.rs
example/stack/: Cargo.toml
example/stack/src/: main.rs
example/tokio-tst/: Cargo.toml
example/tokio-tst/src/: main.rs
flat/: AskForPlayer.fbs  Player.fbs  RespNewPlayer.fbs  SendChat.fbs  Status.fbs
src/: main.rs
