[package]
name = "GamblingCTF"
version = "0.1.0"
authors = ["Angelo <angelorodem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
rand = "0.7.3"
colored = "2"
tokio = { version = "0.2.22", features = ["full", "time"] }
tokio-util = { version = "0.3.1", features = ["full"] }
bytes = "0.5"
futures = "0.3.5"
http = "0.2"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.3.4"
time = "0.2.16"
async-std = "1.6.2"
byteorder = "1.3.4"
flatbuffers = "0.6.1"
internet-checksum = "0.2.0"
num-traits = "0.2"
num-derive = "0.3"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }