[package]
name = "Server"
version = "0.1.0"
authors = ["Angelo <angelorodem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.6.1"
tokio = { version = "0.2.21", features = ["full"] }
async-std = "1.6.2"
futures = "0.3.5"
tokio-util = { version = "0.3.1", features = ["full"] }
bytes = "0.5.6"
byteorder = "1.3.4"