[package]
name = "stack"
version = "0.1.0"
authors = ["Angelo Rodem <angelorodem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full", "time"] }
tokio-util = { version = "0.3.1", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
async-std = "1.6.2"
byteorder = "1.3.4"